--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -28,9 +28,25 @@ jobs:
       # Runs a single command using the runners shell
       - name: Run a one-line script
         run: echo Hello, world!
+         
+      - name: Generate Artifacts
+        run: |
+          # Add commands here to generate your artifacts
+          # For example, compiling your code and creating a distribution package
+
+          # Example: Build a JavaScript project and create a zip archive
+          npm install
+          npm run build
+          zip -r my-app-artifact.zip dist/
+
+      # You can add more steps here, such as testing or deploying the artifacts
+
+        
 
       # Runs a set of commands using the runners shell
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+
+          
